--- a/src/app.scss
+++ b/src/app.scss
@@ -26,3 +26,15 @@ section{
     scroll-snap-align: center;
 }
 
+@mixin mobile {
+    @media (max-width: 738px) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (max-width: 1024px) {
+        @content;
+    }
+}
+
