--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,10 +1,18 @@
+@import '../../app.scss';
+
 .contact {
   height: 100%;
-  width: 1024px;
+  max-width: 1024px;
   margin: auto;
   display: flex;
   align-items: center;
   gap: 50px;
+
+  @include mobile {
+    width: 100%;
+    padding: 10px;
+    flex-direction: column;
+  }
 
   .textContainer {
     flex: 1;
@@ -12,9 +20,21 @@
     flex-direction: column;
     gap: 40px;
 
+    @include mobile {
+      gap: 20px;
+      text-align: center;
+      align-items: center;
+      margin-top: 90px;
+    }
+
     h1 {
       font-size: 80px;
       line-height: 75px;
+
+      @include mobile {
+        font-size: 36px;
+        line-height: 45px;
+      }
     }
 
     span {
@@ -25,12 +45,22 @@
   .formContainer {
     flex: 1;
     position: relative;
+    
+    @include mobile {
+      width: 100%;
+      padding: 50px;
+      transform: none !important;
+    }
 
     .phoneSvg {
         stroke: orange;
         position: absolute;
         margin: auto;
         z-index: -1;
+
+        @include mobile {
+          display: none;
+        }
     }
 
     form {
@@ -38,12 +68,20 @@
       flex-direction: column;
       gap: 20px;
 
+      @include mobile {
+        transform: none !important;
+      }
+
       input, textarea {
         padding: 20px;
         background-color: transparent;
         border: 1px solid white;
         color: white;
         border-radius: 5px;
+
+        @include mobile {
+          padding: 10px;
+        }
       }
 
       button{
@@ -52,6 +90,10 @@
         background-color: orange;
         cursor: pointer;
         font-weight: 500;
+
+        @include mobile {
+          padding: 10px;
+        }
       }
 
     }
