--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,73 +1,101 @@
+@import "../../app.scss";
+
 .hero {
   height: calc(100vh - 100px);
   overflow: hidden;
-  
+
   background: linear-gradient(180deg, #0c0c1d, #111132);
   position: relative;
 
   .wrapper {
-    width: 1024px;
+    max-width: 1024px;
     height: 100%;
     margin: auto;
+    position: relative;
 
     .textContainer {
-        height: 100%;
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 40px;
+      z-index: 1;
+      position: absolute;
+      height: 100%;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 40px;
 
-        h2 {
-            font-size: 25px;
-            color: rebeccapurple;
-            letter-spacing: 10px;
+      @include mobile {
+        height: 50%;
+        width: 100%;
+        gap: 30px;
+        align-items: center;
+        text-align: center;
+      }
+
+      h2 {
+        font-size: 25px;
+        color: rebeccapurple;
+        letter-spacing: 10px;
+      }
+
+      h1 {
+        font-size: 60px;
+
+        @include mobile {
+          font-size: 28px;
         }
+      }
 
-        h1{
-           font-size: 60px; 
+      .buttons {
+        a {
+          padding: 20px;
+          border: 1px solid white;
+          border-radius: 10px;
+          background-color: transparent;
+          color: white;
+          margin-right: 20px;
+          cursor: pointer;
+          font-weight: 300;
         }
+      }
 
-        .buttons {
-            button{
-                padding: 20px;
-                border: 1px solid white;
-                border-radius: 10px;
-                background-color: transparent;
-                color: white;
-                margin-right: 20px;
-                cursor: pointer;
-                font-weight: 300;
-
-            }
-        }
-
-        img{
-            width: 50px;
-        }
+      img {
+        width: 50px;
+      }
     }
-
   }
 
-  .slidingTextContainer{
-    position: absolute ;
+  .slidingTextContainer {
+    position: absolute;
     font-size: 50vh;
     bottom: -75px;
     white-space: nowrap;
     color: #ffffff09;
     width: 50%;
     font-weight: bold;
-
   }
 
   .imageContainer {
-    
     margin: 0 7rem;
     position: absolute;
     clip-path: circle(50% at 50% 50%);
     top: 10%;
     right: 0;
-}
 
+    @include mobile {
+      height: 45%;
+      width: 100%;
+      top: unset;
+      bottom: 0;
+      right: unset;
+      left: -29%;
+      margin-bottom: 40px;
 
+      img {
+        overflow: visible;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
 }
