--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -1,3 +1,6 @@
+@import '../../app.scss';
+
+
 .parallax {
     width: 100%;
     height: 100%;
@@ -8,7 +11,12 @@
     overflow: hidden;
 
     h1{
-        font-size: 80px;   
+        font-size: 80px; 
+        
+        @include mobile {
+            font-size: 50px;
+            
+        }
     }
 
     .mountains{
@@ -19,6 +27,11 @@
         height: 100%;
         position: absolute;
         z-index: 3;
+
+        @include mobile {
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
     }
     .planets{
         background-image: url("/public/planets.png");
@@ -28,6 +41,11 @@
         height: 100%;
         position: absolute;
         z-index: 2;
+
+        @include mobile {
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
     }
     .stars{
         background-image: url("/public/stars.png");
@@ -37,5 +55,7 @@
         height: 100%;
         position: absolute;
         z-index: 1;
+
+        
     }
 }
