fixed github see demo button for mobile devices

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -32,7 +32,7 @@
     overflow: hidden;
 
     .wrapper {
-      width: 1024px;
+      max-width: 1024px;
       height: 100%;
       margin: auto;
       display: flex;
@@ -42,6 +42,7 @@
 
       @include mobile {
         flex-direction: column;
+        gap: 20px;
       }
 
       .imageContainer {
@@ -73,7 +74,6 @@
         gap: 30px;
 
         @include mobile {
-          transform: none !important;
           padding: 10px;
           align-items: center;
           text-align: center;
